:bug:(#178): corrigindo nome do container
Co-authored-by:  yuriAlves5 <Yurivalerio12@gmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
 
   postgres:
     image: postgres
-    container_name: printgoprinterservice
+    container_name: printgoprinterservicedb
     ports:
       - "5432:5432"
     environment:
