--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,9 @@
 version: '3'
 services:
   app:
-    image: printgoprinterservice
+    build:
+      context: .
+      dockerfile: Dockerfile
     container_name: printgoprinterservice
     ports:
       - "8080:8080"
