--- a/package.json
+++ b/package.json
@@ -4,25 +4,27 @@
     "description": "",
     "main": "App.js",
     "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1",
-      "start": "node dist/App.js",
-      "dev": "tsc -w & node dist/App.js"
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node dist/App.js",
+        "dev": "tsc -w & node dist/App.js"
     },
     "repository": {
-      "type": "git",
-      "url": "git+https://github.com/fga-eps-mds/2023.2-PrintGo-PrinterService.git"
+        "type": "git",
+        "url": "git+https://github.com/fga-eps-mds/2023.2-PrintGo-PrinterService.git"
     },
     "author": "",
     "license": "MIT",
     "bugs": {
-      "url": "https://github.com/fga-eps-mds/2023.2-PrintGo-PrinterService/issues"
+        "url": "https://github.com/fga-eps-mds/2023.2-PrintGo-PrinterService/issues"
     },
     "homepage": "https://github.com/fga-eps-mds/2023.2-PrintGo-PrinterService#readme",
     "dependencies": {
-      "express": "^4.18.2"
+        "express": "^4.18.2",
+        "ts-node": "^10.9.1"
     },
     "devDependencies": {
-      "@types/express": "^4.17.18",
-      "typescript": "^5.2.2"
+        "@types/express": "^4.17.18",
+        "nodemon": "^3.0.1",
+        "typescript": "^5.2.2"
     }
-  }
+}
