:bulb: (#178) configuração do server.ts
Co-authored-by: mibasFerraz <lucasllff@gmail.com>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       - DATABASE_URL=postgresql://admin:printgo@postgres:5432/printerservice
     depends_on:
       - postgres
+    volumes:
+      - .:/app
 
   postgres:
     image: postgres
