--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "App.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "node dist/App.js",
+        "start": "nodemon",
         "dev": "tsc -w & node dist/App.js"
     },
     "repository": {
