--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,28 @@
-version: '3'
+version: "3.1"
+
 services:
-  app:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    container_name: printgoprinterservice
+  api:
+    container_name: printgo-printer-service
+    restart: on-failure
+    build: .
+    environment:
+      DATABASE_URL: ${DATABASE_URL}
+      NODE_ENV: development
+      PORT: 8080
+    volumes:
+      - .:/src
     ports:
       - "8080:8080"
-    environment:
-      - DATABASE_URL=postgresql://admin:printgo@postgres:5432/printerservice
-    depends_on:
-      - postgres
-    volumes:
-      - .:/app
+    env_file:
+      - .env
+    networks:
+      - printgo_network
 
-  postgres:
-    image: postgres
-    container_name: printgoprinterservicedb
-    ports:
-      - "5432:5432"
-    environment:
-      - POSTGRES_DB=printerservice
-      - POSTGRES_USER=admin
-      - POSTGRES_PASSWORD=printgo
+volumes:
+  printgo_database:
+
+networks:
+    printgo_network:
+        driver: bridge
+        driver_opts:
+            com.docker.network.bridge.enable_icc: "true"
