--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     },
     "homepage": "https://github.com/fga-eps-mds/2023.2-PrintGo-PrinterService#readme",
     "dependencies": {
+        "@fernandes-natanael/printgo-prisma": "^1.0.3",
         "bcryptjs": "^2.4.3",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
+        "i": "^0.3.7",
         "jsonwebtoken": "^9.0.2",
+        "npm": "^10.2.4",
         "ts-node": "^10.9.1"
     },
     "devDependencies": {
