--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
     "description": "",
     "main": "App.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "test": "jest --passWithNoTests --no-cache --runInBand",
+        "test:all": "CI=true npm run test -- --coverage",
         "start": "nodemon",
-        "dev": "tsc -w & node dist/App.js"
+        "lint": "eslint  --ext .ts",
+        "lint:fix": "eslint  --ext .ts --fix"
     },
     "repository": {
         "type": "git",
@@ -19,20 +21,29 @@
     },
     "homepage": "https://github.com/fga-eps-mds/2023.2-PrintGo-PrinterService#readme",
     "dependencies": {
-        "@fernandes-natanael/printgo-prisma": "^1.0.3",
+        "@fernandes-natanael/printgo-prisma": "^1.0.4",
         "bcryptjs": "^2.4.3",
         "cors": "^2.8.5",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "i": "^0.3.7",
         "jsonwebtoken": "^9.0.2",
-        "npm": "^10.2.4",
-        "ts-node": "^10.9.1"
+        "npm": "^10.2.4"
     },
     "devDependencies": {
+        "@babel/core": "^7.23.3",
+        "@babel/preset-env": "^7.23.3",
         "@types/express": "^4.17.18",
+        "eslint": "^8.53.0",
+        "jest": "^29.7.0",
+        "jest-mock-extended": "^3.0.5",
+        "jest-sonar": "^0.2.16",
+        "jest-sonar-reporter": "^2.0.0",
         "nodemon": "^3.0.1",
         "prisma": "^5.5.2",
+        "ts-jest": "^29.1.1",
+        "ts-node": "^10.9.1",
+        "ts-node-dev": "^2.0.0",
         "typescript": "^5.2.2"
     }
 }
