:repeat: corrigindo versao do schema

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,2 @@
-DATABASE_URL=
-DATABASE_PORT=
-POSTGRES_USER=
-POSTGRES_PASSWORD=
-POSTGRES_DB=
-ENV=
+DATABASE_URL="postgresql://postgres:postgres@printgo-database:5432/printgo?schema=public"
+ENV="DEV"
