--- a/package.json
+++ b/package.json
@@ -33,7 +33,11 @@
     "devDependencies": {
         "@babel/core": "^7.23.3",
         "@babel/preset-env": "^7.23.3",
+        "@babel/preset-typescript": "^7.23.3",
         "@types/express": "^4.17.18",
+        "@types/jest": "^29.5.6",
+        "@types/node": "^20.8.7",
+        "@types/supertest": "^2.0.15",
         "eslint": "^8.53.0",
         "jest": "^29.7.0",
         "jest-mock-extended": "^3.0.5",
