--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "jest-sonar-reporter": "^2.0.0",
         "nodemon": "^3.0.1",
         "prisma": "^5.5.2",
+        "supertest": "^6.3.3",
         "ts-jest": "^29.1.1",
         "ts-node": "^10.9.1",
         "ts-node-dev": "^2.0.0",
